# trabfinal-ed

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  config.ini  gendata.py  test.py
src/: config.c  config.h  dataloader.c  dataloader.h  logging.c  logging.h  main.c  markov.c  markov.h  markovgraph.c  markovgraph.h  markovnetwork.c  markovnetwork.h  matrixgraph.c  matrixgraph.h  typedefs.h  utils.c  utils.h
